force-app/main/default/objects/Pedido__c/fields/Capacidad_Deseada__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Deseada__c</fullName>
    <inlineHelpText>Capacidad solicitada por el cliente para este pedido.</inlineHelpText>
    <label>Capacidad Deseada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>