force-app/main/default/objects/Pedido__c/fields/Estado_del_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_Pedido__c</fullName>
    <inlineHelpText>Estado actual del pedido especial.</inlineHelpText>
    <label>Estado del Pedido</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>En Producción</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>