force-app/main/default/objects/Pedido__c/fields/Nombre_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Pedido__c</fullName>
    <inlineHelpText>Descripción o identificador personalizado para este pedido.</inlineHelpText>
    <label>Nombre de Pedido</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>