force-app/main/default/objects/Pedido__c/fields/Precio_Maximo_Deseado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Maximo_Deseado__c</fullName>
    <inlineHelpText>Precio máximo aceptable para el cliente para este pedido.</inlineHelpText>
    <label>Precio Máximo Deseado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>