force-app/main/default/objects/Pedido__c/fields/Tanque__c.field-meta.xml
<CustomField>
    <fullName>Tanque__c</fullName>
    <inlineHelpText>El tanque específico asociado a este pedido.</inlineHelpText>
    <label>Tanque</label>
    <referenceTo>Tanque__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>