force-app/main/default/objects/Pedido__c/fields/Tipo_de_Tanque_Deseado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tanque_Deseado__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>El tipo de tanque preferido por el cliente para este pedido.</inlineHelpText>
    <label>Tipo de Tanque Deseado</label>
    <referenceTo>Tipo_de_Tanque__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>